# university

./: CMakeLists.txt
IPZ/ipz_lab5/docs/: overview-summary.html
IPZ/ipz_lab5/docs/work5/: Main.html  Student.html
IPZ/lab3/: build.xml
IPZ/lab4/: build.xml
IPZ/lab4/src/work4/: Row.java  (+6 more)
IPZ/lab5/: build.xml
IPZ/lab5/docs/: allclasses-index.html  allpackages-index.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  search.html  type-search-index.js
IPZ/lab6/: build.xml
IPZ/lab6/doc/: allclasses-index.html  element-list  index-all.html  index.html  overview-summary.html  overview-tree.html  search.html
IPZ/lab6/src/: game_config.txt
doc/: allpackages-index.html  help-doc.html  member-search-index.js  package-search-index.js  type-search-index.js
doc/work6/: package-summary.html  package-tree.html  package-use.html
doc/work6_1/: Director.html  GameSpaceBuilder.html  package-tree.html  package-use.html
doc/work6_1/class-use/: ConcreteGameBuilder.html  Director.html  GameSpaceBuilder.html  RectangleGameSpace.html
docs/: element-list
docs/javadoc/: allpackages-index.html  overview-summary.html
docs/javadoc/task1/: FileItem.html  FileSystemItem.html  Folder.html
docs/javadoc/task2/: CartesianPoint.html  CircleDrawer.html
docs/work5/: Teacher.html  UniversityElement.html  package-summary.html  package-tree.html
docs/work5task2/: AddExpression.html  Main.html
include/: sort.h
linux/linux_ex1/patches/: 0002-formatting-use-tabs-instead-of-spaces.patch
linux/linux_task2/: CMakeLists.txt
linux/linux_task4/src/: sort.cpp
linux_kursova/linux_task2/: Makefile  main.cpp
linux_kursova/linux_task4/include/: pch.h  stringProcessor.h
patches/: 0001-fix-truncation-error.patch
src/: stringProcessor.cpp
src/task2/: CircleDrawer.java  Main.java  PolarPointAdapter.java
src/work5/: UniversityVisitor.java
src/work5task2/: Main.java  SubtractExpression.java
src/work6/: QueryValidator.java  Table.java
src/work6_1/: ConcreteGameBuilder.java  Director.java  RectangleGameSpace.java
(+87 files in other folders)
