cmake_minimum_required(VERSION 3.10)
project(task2_project LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)


add_library(calculator STATIC calculator.cpp)
target_include_directories(calculator PUBLIC ${CMAKE_SOURCE_DIR})


add_executable(calc_app main.cpp)
target_link_libraries(calc_app PRIVATE calculator)
